// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.governance;

option java_multiple_files = true;

service JsonExpansionService {
  rpc expand(ExpansionRequestBatch) returns (ExpansionResponseBatch);
}

message ExpansionRequestBatch {
  repeated ExpansionRequestProto expansionRequestProto = 1;
  ExpansionRequestMetadata requestMetadata = 2;
}

message ExpansionRequestProto {
  string fqn = 1;
  bytes value = 2;
  string key = 3;
}

message ExpansionResponseBatch {
  repeated ExpansionResponseProto expansionResponseProto = 1;
}

message ExpansionResponseProto {
  string fqn = 1;
  string key = 2;
  string value = 3;
  ExpansionPlacementStrategy placement = 4;
  bool success = 5;
  string errorMessage = 6;
}

enum ExpansionPlacementStrategy {
  REPLACE = 0;
  PARALLEL = 1;
  MOVE_UP = 2;
  APPEND = 3;
}

message ExpansionRequestMetadata {
  string accountId = 1;
  string projectId = 2;
  string orgId = 3;
  bytes gitSyncBranchContext = 4;
}
